--- a/index.html
+++ b/index.html
@@ -888,16 +888,17 @@
                         <li>Experienced leadership team with deep industry expertise</li>
                     </ul>
                 </div>
-                <div class="investor-chart fade-in" style="background-image: url('images/ChatGPT\ Image\ Oct\ 23\,\ 2025\,\ 02_37_27\ AM.png'); background-size: cover; min-height: 400px;
-                    display: flex; flex-direction: column; justify-content: flex-end;">
-                    <h3 class="chart-title" style="color: #ffffff;"></h3>
+                <div class="investor-chart fade-in" style="background: #003366;">
+                    <h3 class="chart-title" style="color: #ffffff;">INVEST NOW</h3>
+                    <p class="chart-title" style="color: #ffffff;">Announcement: ExxonMobil Qatar is currently offering company shares for purchase. This offering is open to qualified investors. For 
+                        full terms, documentation, and to request investor materials, please contact our Investor Relations team below. 
+                    </p>
                 </div>
             </div>
-            <div class="partners-section">
-                <h3 class="partners-title">Send Us a Mail Now</h3>
-                <h2 class="partners-title">exxonmobilqatarshares@gmail.com</h2>
-                </div>
+            <div class="investor-header">
+                <h3 class="shares-badge">exxonmobilqatarshares@gmail.com </h3>
             </div>
+
         </div>
     </section>
 
