--- a/index.html
+++ b/index.html
@@ -730,6 +730,21 @@
             opacity: 1;
             transform: translateY(0);
         }
+        .contact-btn {
+            display: inline-block;
+            background: #004aad;
+            color: white;
+            padding: 12px 24px;
+            border-radius: 8px;
+            text-decoration: none;
+            transition: 0.3s ease;
+            animation: pulse 5s infinite;
+        }
+
+        .contact-btn:hover {
+            background: #344666;
+        }
+
     </style>
 </head>
 <body>
@@ -896,7 +911,8 @@
                 </div>
             </div>
             <div class="investor-header">
-                <h3 class="shares-badge">exxonmobilqatarshares@gmail.com </h3>
+                <a href="mailto:exxonmobilqatarsharesonline@gmail.com?subject=Website%20Inquiry&body=Hello%20ExxonMobil%20Qatar%20Shares%20Team," class="contact-btn">Click Here! to Send Us an Email</a>
+
             </div>
 
         </div>
